# bevfusion_ros2

./: Dockerfile  README.md  README.txt
autoware_lidar_bevfusion/: CMakeLists.txt  README.md  package.xml
autoware_lidar_bevfusion/config/: bevfusion.param.yaml  bevfusion_ml_package.param.yaml
autoware_lidar_bevfusion/include/autoware/lidar_bevfusion/: bevfusion_config.hpp  bevfusion_trt.hpp  cuda_utils.hpp  detection_class_remapper.hpp  lidar_bevfusion_node.hpp  ros_utils.hpp  utils.hpp  visibility_control.hpp
autoware_lidar_bevfusion/include/autoware/mmcv_spconv/: spconv_ops.hpp  spconv_utils.h
autoware_lidar_bevfusion/include/autoware/tensorrt_plugins/: get_indice_pairs_3d_forward_plugin.hpp  get_indice_pairs_3d_forward_plugin_creator.hpp  get_indice_pairs_implicit_gemm_plugin.hpp  get_indice_pairs_implicit_gemm_plugin_creator.hpp  implicit_gemm_plugin.hpp  implicit_gemm_plugin_creator.hpp  indice_conv_plugin.hpp  plugin_registration.hpp  plugin_utils.hpp  quick_cumsum_cuda_plugin.hpp  subm_conv_plugin.hpp  (+4 more)
autoware_lidar_bevfusion/launch/: lidar_bevfusion.launch.xml
autoware_lidar_bevfusion/lib/: bevfusion_trt.cpp  detection_class_remapper.cpp  ros_utils.cpp
autoware_lidar_bevfusion/lib/network/: network_trt.cpp
autoware_lidar_bevfusion/lib/postprocess/: circle_nms_kernel.cu  non_maximum_suppression.cpp  postprocess_kernel.cu
autoware_lidar_bevfusion/lib/preprocess/: pointcloud_densification.cpp  precomputed_features.cpp  preprocess_kernel.cu  voxel_generator.cpp
autoware_lidar_bevfusion/src/: lidar_bevfusion_node.cpp
autoware_lidar_bevfusion/src/bev_ops/: bev_pool_cuda.cu
autoware_lidar_bevfusion/src/example/: build_camera_lidar_engine.cpp  run_camera_lidar_engine.cpp
autoware_lidar_bevfusion/src/mmcv_spconv/: CMakeLists.txt  spconv_ops.cpp
autoware_lidar_bevfusion/src/mmcv_spconv/cpu/: sparse_indice.cpp  sparse_reordering.cpp
autoware_lidar_bevfusion/src/mmcv_spconv/cuda/: cudabind.cpp  sparse_indice.cu  sparse_reordering.cu  spconv_ops_cuda.cu
autoware_lidar_bevfusion/src/tensorrt_plugins/: get_indice_pairs_3d_forward_plugin.cpp  get_indice_pairs_3d_forward_plugin_creator.cpp  get_indice_pairs_implicit_gemm_plugin.cpp  get_indice_pairs_implicit_gemm_plugin_creator.cpp  implicit_gemm_plugin.cpp  implicit_gemm_plugin_creator.cpp  indice_conv_plugin.cpp  plugin_registration.cpp  plugin_utils.cpp  quick_cumsum_cuda_plugin.cpp  quick_cumsum_cuda_plugin_creator.cpp  sparse_conv_plugin.cpp  sparse_conv_plugin_creator.cpp  subm_conv_plugin.cpp  subm_conv_plugin_creator.cpp
autoware_lidar_bevfusion/test/: test_detection_class_remapper.cpp  test_nms.cpp  test_postprocess_kernel.cpp  test_postprocess_kernel.hpp  test_preprocess_kernel.cpp  test_preprocess_kernel.hpp  test_ros_utils.cpp  test_voxel_generator.cpp  test_voxel_generator.hpp
autoware_tensorrt_common/: CMakeLists.txt
autoware_tensorrt_common/src/: tensorrt_common.cpp
spconv/: CMakeLists.txt
spconv/cmake/: spconvConfig.cmake.in
(+17 files in other folders)
